--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -2,6 +2,9 @@
 $color: #012345;
 $color-light: #677B8F;
 
+// шрифты
+$font: "Codec Pro", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 // тема
 $pink: #F84AB3;
 $violet: #4959FF;
