Добавлена стлизованная страница ошибки

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -8,3 +8,4 @@ $font: "Codec Pro", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxyge
 // тема
 $pink: #F84AB3;
 $violet: #4959FF;
+$grey: #F3F4F7;
