--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -9,3 +9,6 @@ $font: "Codec Pro", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxyge
 $pink: #F84AB3;
 $violet: #4959FF;
 $grey: #F3F4F7;
+
+// цвет темной темы
+$dark-mode: #012345;
